[gd_scene load_steps=7 format=3 uid="uid://bi61vu3en7lni"]

[ext_resource type="Script" path="res://Unidades/Enemigos/Boss/enemy_boss.gd" id="1_ec1vi"]
[ext_resource type="PackedScene" uid="uid://c3g3xxfejaisr" path="res://Ataques/Enemigos/enemy_bullet.tscn" id="2_bh3wo"]
[ext_resource type="PackedScene" uid="uid://ds1bua0otd6l8" path="res://Escenas/Items/experience_token.tscn" id="3_pig7b"]
[ext_resource type="Texture2D" uid="uid://b8hu6gsh68xy8" path="res://Arte/mage_dark.png" id="4_fduy1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5s5hm"]
radius = 11.0
height = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gfj13"]
radius = 321.45

[node name="EnemyBoss" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 19
motion_mode = 1
script = ExtResource("1_ec1vi")
bullet = ExtResource("2_bh3wo")
tier = 4
health = 200
damage = 12
move_speed = 70.0
attack_cooldown = 1.0
experience_token = ExtResource("3_pig7b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("CapsuleShape2D_5s5hm")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(1.6, 1.6)
texture = ExtResource("4_fduy1")
flip_h = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_gfj13")

[node name="TimerShoot" type="Timer" parent="."]
wait_time = 2.5

[node name="TimerAttackCooldown" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="TimerShoot" to="." method="_on_timer_shoot_timeout"]
